# dizcover-backend

./: .gitignore  Dockerfile  README.md  errores.html  manage.py  pyproject.toml  requirements.txt
api/: urls.py
api/migrations/: 0001_initial.py
api_eventos/: apps.py  models.py  urls.py  views.py
api_eventos/migrations/: 0001_initial.py
autenticacion/: admin.py  managers.py  models.py  pipelines.py  serializer.py  signals.py  urls.py  views.py
autenticacion/migrations/: 0001_initial.py  0002_users_tiene_tipo.py  0003_users_tipo.py  0004_alter_users_tipo.py  0005_remove_users_tiene_tipo_alter_users_tipo.py
autenticacion/templates/: error.html  login.html  seleccion_tipo_usuario.html
discotequero/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
discotequero/migrations/: 0001_initial.py  0002_alter_discotequero_digito_verificacion.py  0003_alter_discotequero_digito_verificacion.py  0004_alter_discotequero_digito_verificacion.py  0005_alter_discotequero_nit_verificado.py  0006_rename_digito_verificacion_discotequero_numero_verificacion.py  0007_alter_discotequero_nit_verificado_and_more.py
dizcover_back/: asgi.py  settings.py  urls.py  wsgi.py
establecimiento/: admin.py  models.py  serializer.py  urls.py  views.py
eventos/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
eventos/migrations/: 0001_initial.py  (+4 more)
fiestero/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
recomendacion/: 0001_load_etiquetas.py  admin.py  etiquetas.json  models.py  serializer.py  urls.py  views.py
templates/: home.html
(+35 files in other folders)
