[tool.poetry]
name = "dizcover"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asarpy = "1.0.1"
asgiref = "3.8.1"
boto3 = "1.36.16"
botocore = "1.36.16"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.3.2"
coreapi = "2.3.3"
coreschema = "0.0.4"
cryptography = "43.0.1"
django = "5.1.1"
django-allauth = "65.0.2"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"
idna = "3.10"
inflection = "0.5.1"
itypes = "1.2.0"
jinja2 = "3.1.4"
jmespath = "1.0.1"
jwt = "1.3.1"
markupsafe = "2.1.5"
packaging = "24.1"
pillow = "11.0.0"
pycparser = "2.22"
pyjwt = "2.9.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.2"
pyyaml = "6.0.2"
requests = "2.32.3"
s3transfer = "0.11.2"
setuptools = "75.1.0"
six = "1.17.0"
sqlparse = "0.5.1"
uritemplate = "4.1.1"
urllib3 = "2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
